--- a/templates/page.pug
+++ b/templates/page.pug
@@ -7,7 +7,11 @@ html
         meta(charset="utf-8")
         title= 'API Documentation'
         style
-            include style/flatly.css
+            include style/default.css
+            //- include style/cyborg.css
+            //- include style/flatly.css
+            //- include style/slate.css
+            //- include style/streak.css
             include style/custom.css
 
     body.preload
