style: add fontawesome

--- a/templates/page.pug
+++ b/templates/page.pug
@@ -6,13 +6,9 @@ html
     head
         meta(charset="utf-8")
         title= 'API Documentation'
-        style
-            include style/default.css
-            //- include style/cyborg.css
-            //- include style/flatly.css
-            //- include style/slate.css
-            //- include style/streak.css
-            include style/custom.css
+        link(rel="stylesheet", href="/assets/fontawesome/css/font-awesome.min.css")
+        link(rel="stylesheet", href="/assets/default.css")
+        link(rel="stylesheet", href="/assets/custom.css")
 
     body.preload
         div.container-fluid
