style: fix Badge mixin

--- a/templates/mixins.pug
+++ b/templates/mixins.pug
@@ -38,7 +38,7 @@ mixin Nav()
                       li
                         - var resourceId = resourceGroup.name + '-' + resource.name
                         a(href='#' + resourceId)
-                            span.badge(class= resource.methodLower)
+                            +Badge(resource.method)
                             != resource.name
    
 
