--- a/templates/page.pug
+++ b/templates/page.pug
@@ -7,7 +7,7 @@ html
         meta(charset="utf-8")
         title= 'API Documentation'
         link(rel="stylesheet", href="/assets/fontawesome/css/font-awesome.min.css")
-        link(rel="stylesheet", href="/assets/default.css")
+        link(rel="stylesheet", href="/assets/" + self.theme + ".css")
         link(rel="stylesheet", href="/assets/custom.css")
 
     body.preload
