--- a/templates/style/custom.css
+++ b/templates/style/custom.css
@@ -1,16 +1,13 @@
 
-
+/* 接口标题 */
 .action h4.action-heading .name {
   float: none;
   margin-left: 12px;
 }
-.block-table {
-  width: 100%;
-  text-align: left;
+.params-inner {
+  line-height: 1.5;
 }
-.block-table th:not(:last-child) {
-  width: 160px;
+.collapse-content {
+  margin-bottom: 10px;
 }
-
-
 
