--- a/templates/style/custom.css
+++ b/templates/style/custom.css
@@ -1,4 +1,47 @@
-
+.menu {
+  text-align: center;
+  line-height: 36px;
+  font-size: 20px;
+  background: #eee;
+  z-index: 1;
+  width: 22%;
+  position: fixed;
+  top: 6px;
+  border-radius: 18px;
+  height: 36px;
+  cursor: pointer;
+}
+.menu-icon {
+  margin-left: 16px;
+}
+.menu-items {
+  position: absolute;
+  left: 0;
+  top: 36px;
+  right: 0;
+  background: #fff;
+  border: 1px solid #fefefe;
+  padding: 8px;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.15), 0 2px 4px rgba(0, 0, 0, 0.29);
+  border-radius: 6px;
+  display: none;
+}
+.menu:hover .menu-items {
+  display: block;
+}
+.menu-item {
+  border-radius: 4px;
+  cursor: pointer;
+}
+.menu-item:hover {
+  background-color: #eee;
+  color: #337ab7;
+}
+/* 导航栏 */
+.nav-fixed {
+  top: 48px;
+  z-index: 0;
+}
 /* 接口标题 */
 .action h4.action-heading .name {
   float: none;
