--- a/templates/page.pug
+++ b/templates/page.pug
@@ -14,6 +14,7 @@ html
         div.container-fluid
             .row
                 block nav
+                    +Menu()
                     +Nav()
 
                 .content
