--- a/templates/mixins.pug
+++ b/templates/mixins.pug
@@ -129,9 +129,14 @@ mixin Content()
                         
                         //- request
                         if resource.request.hasContent
-                            strong Request
-                            pre: code
-                                != resource.request.body                 
+                            .title
+                                strong Request
+                                .collapse-button.show
+                                    span.close Hide
+                                    span.open Show
+                            .collapse-content        
+                                pre: code
+                                    != self.highlight(resource.request.body, null, ['json', 'yaml', 'xml', 'javascript'])                 
                         
                         //- response
                         if resource.response.hasContent
